--- a/teams-u16g.html
+++ b/teams-u16g.html
@@ -48,7 +48,7 @@
 </div>
 <div>
   <h3 style="margin-top: 10px">MATCH REPORTS</h3>
-  <ul>
+  <ul style="column-count: 3">
     <li><a href="/u16g-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
     <li><a href="/u16g-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
     <li><a href="/u16g-match-report/?id=r03" rel="nofollow">Round 3 Match Report</a></li>
