--- a/teams-u17.5b.html
+++ b/teams-u17.5b.html
@@ -49,7 +49,7 @@
 </div>
 <div>
   <h3 style="margin-top: 10px">MATCH REPORTS</h3>
-  <ul>
+  <ul style="column-count: 3">
     <li><a href="/u17.5b-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
     <li><a href="/u17.5b-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
   </ul>
