--- a/teams-u12m.html
+++ b/teams-u12m.html
@@ -51,7 +51,7 @@
 </div>
 <div>
   <h3 style="margin-top: 10px">MATCH REPORTS</h3>
-  <ul>
+  <ul style="column-count: 3">
     <li><a href="/u12m-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
     <li><a href="/u12m-match-report/?id=r06" rel="nofollow">Round 6 Match Report</a></li>
     <li><a href="/u12m-match-report/?id=r07" rel="nofollow">Round 7 Match Report</a></li>
