--- a/teams-u11m-match-report.html
+++ b/teams-u11m-match-report.html
@@ -14,6 +14,7 @@
     else if (window.location.search.includes('id=r12')) jQuery('#r12').show();
     else if (window.location.search.includes('id=r13')) jQuery('#r13').show();
     else if (window.location.search.includes('id=r14')) jQuery('#r14').show();
+    else if (window.location.search.includes('id=f01')) jQuery('#f01').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -443,6 +444,43 @@
     It was great to sing the song as a team, with our 50 gamer Brodie in the middle of the circle, getting absolutely drenched. Next we&rsquo;re off to a
     Qualifying Final, well done team!
   </p>
+  <p>Go Baysie!</p>
+</div>
+<div id="f01" style="display: none">
+  <h3>Final 1</h3>
+  <p>
+    Another very special game for our team with us celebrating with Josh B for his 50th game, what a fantastic achievement, well done Josh! It was so exciting
+    to see you run through your banner and lead the team on to the field after your milestone medal presentation. A huge thanks to Shaun for being involved
+    again and sharing some words for Josh.
+  </p>
+  <p>
+    Our captains for our first ever footy final were Archer and Dallas and we were up against the Minor Premiers Lysterfield. We knew we were going to have a
+    tough game on our hands as they&rsquo;ve had a terrific season to finish on top of the ladder with only the one loss&hellip; which came against us a few
+    weeks ago.
+  </p>
+  <p>
+    We spoke after last week&rsquo;s game about how beneficial it was to have a really tough game leading into finals, and having to fight hard for the win
+    would help us be ready for this week. The ground conditions were almost identical as well so we knew we were ready if the game became a real fight. That was
+    exactly what happened, the intensity throughout the whole game was unbelievable, with heart in your mouth moments throughout the contest, but we were ready
+    for that.
+  </p>
+  <p>
+    It wasn&rsquo;t the most thrilling scoreline in the end, but it reflected just how hard we had to fight for the win. Whilst neither team could capitalise on
+    their opportunities for a goal, and both teams had chances to win, it was our fight on the last line of defence over and over that was incredible. To keep a
+    team to a single point in a 48 minute game of footy is quite unbelievable. A lot of the hard work was done in the middle, with us controlling ground
+    positioning for a lot of the game and in particular the last quarter, with the game there to be won it didn&rsquo;t leave our forward half of the ground.
+  </p>
+  <p>We have more work to do to get the job done, with a particular need to focus on how we can connect better with our forward line.</p>
+  <p>
+    A huge thank you to our team officials who give up their time every week and to our parent helpers on the day for helping to ensure our kids get to play and
+    enjoy the game.
+  </p>
+  <p>
+    It was great to belt out the song as a team, with our 50 gamer Josh in the middle of the circle. Next we&rsquo;re off to the Grand Final, well done team!
+    We&rsquo;re so incredibly proud of you all, not only for your achievements on the field but the way you have gone about it, we&rsquo;re so lucky to have
+    such a great bunch of kids. Enjoy the next couple of weeks, soak it all in, and just have the most fun with the experience.
+  </p>
+  <p>One more win!</p>
   <p>Go Baysie!</p>
 </div>
 <div id="not-found" style="display: none">
